# stdromano

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  build.bat  build.sh  stdromanoConfig.cmake.in  stdromanoDeps.cmake.in  vcpkg.json
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: target_options.cmake
include/stdromano/: Vector.natvis  aliases.hpp  atomic.hpp  bits.h  bits.hpp  char.h  char.hpp  command_line_parser.hpp  cpu.h  cpu.hpp  endian.h  endian.hpp  enumerate.hpp  env.hpp  expected.hpp  filesystem.h  filesystem.hpp  hash.h  hash.hpp  hashcontainer.hpp  hashmap.h  hashmap.hpp  hashset.h  hashset.hpp  json.hpp  logger.h  logger.hpp  loop_guard.hpp  maths.hpp  memory.h  memory.hpp  opencl.hpp  optional.h  optional.hpp  profiling.h  profiling.hpp  python.hpp  random.h  random.hpp  regex.hpp  (+13 more)
include/stdromano/linalg/: backend.hpp  dense_matrix.hpp  traits.hpp  transform.hpp  vector.hpp
scripts/: clang_format_all.bat  clang_format_all.sh  validate_json.py
src/: CMakeLists.txt  command_line_parser.cpp  cpu.cpp  dll_main.cpp  filesystem.cpp  hash.cpp  json.cpp  linalg_backend.cpp  linalg_dense_matrix.cpp  linalg_dense_matrix_kernels.cpp  logger.cpp  memory.cpp  opencl.cpp  python.cpp  random.cpp  regex.cpp  simd.cpp  string.cpp  threading.cpp
src/asm/x64_linux/: strcmp.asm  strcmp.s
src/asm/x64_windows/: strcmp.asm
src/cl/: matfillf_kernel.cl  matmulf_kernel.cl
tests/: CMakeLists.txt  test.h  test.hpp  test_command_line_parser.cpp  test_densematrix.cpp  test_enumerate.cpp  test_env.cpp  test_expected.cpp  test_filesystem.cpp  test_hashmap.cpp  test_hashset.cpp  test_json.cpp  test_linalg_transform.cpp  test_linalg_vector.cpp  test_memory.cpp  test_opencl.cpp  test_python.cpp  test_random.cpp  test_regex.cpp  test_stackvector.cpp  test_string.cpp  test_threading.cpp  test_vector.cpp
